--- a/index.html
+++ b/index.html
@@ -119,6 +119,8 @@
     <a href="tagy.html">tagy</a>
     <a href="last4.html">last4</a>
     <a href="snips.html">snips</a>
+    <a href="standartize.html">standartize</a>
+    <a href="templated.html">templated</a>
   <B><a href="https://github.com/frida">Frida</a> / <a href="https://portswigger.net/burp">Burp</a> / Mitmproxy</B>
 	200D 200E 200B 202E 3164
 	</p>
