--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
     <a href="snips.html">snips</a>
     <a href="standartize.html">standartize</a>
     <a href="templated.html">templated</a>
+    <a href="deCRYPTLONE.html">rclone deobscure</a>
   <B><a href="https://github.com/frida">Frida</a> / <a href="https://portswigger.net/burp">Burp</a> / Mitmproxy</B>
 	200D 200E 200B 202E 3164
 	</p>
