--- a/index.html
+++ b/index.html
@@ -122,6 +122,9 @@
     <a href="standartize.html">standartize</a>
     <a href="templated.html">templated</a>
     <a href="deCRYPTLONE.html">rclone deobscure</a>
+    <a href="mictest.html">mictest</a>
+    <a href="diff.html">textdiff</a>
+    <a href="pcd.html">nearest 10th day</a>
   <B><a href="https://github.com/frida">Frida</a> / <a href="https://portswigger.net/burp">Burp</a> / Mitmproxy</B>
 	200D 200E 200B 202E 3164
 	</p>
