--- a/snips.html
+++ b/snips.html
@@ -25,6 +25,7 @@ gap:8px;
 <pre>yt-dlp -f mp4 -S res:360 -S res,vcodec:av1 </pre>
 <pre>yt-dlp -f -</pre>
 <pre>yt-dlp --merge-output-format mp4</pre>
+<pre>yt-dlp --cookies-from-browser firefox </pre>
 <pre>yt-dl --write-subs --write-auto-subs --embed-subs --write-thumbnail --write-description --write-info-json </pre>
 </pre>
 </details>
