--- a/snips.html
+++ b/snips.html
@@ -76,6 +76,7 @@ gap:8px;
 <pre>curl -O xyz </pre>
 <pre>ssh sv01.nty -p 2023 -l testing -i sshkey.private</pre>
 <pre>crontab -e</pre>
+<pre>git reset --hard ae387a292e0fa75ef1571489266700c76d27f800 && git push --force</pre>
 </pre>
 </details>
 
