--- a/snips.html
+++ b/snips.html
@@ -128,6 +128,7 @@ gap:8px;
 <pre>Get-ChildItem -Path "www.website.local" -Recurse | ForEach-Object { $_.FullName }</pre>
 <pre>Get-ChildItem -Path "www.website.local" -Filter *.html -Recurse | Select-Object -ExpandProperty FullName</pre>
 <pre>bash spn.sh -p 1 -w 60 links.txt</pre>
+<pre>netstat -tunlp</pre>
 </pre>
 </details>
 
