--- a/snips.html
+++ b/snips.html
@@ -105,6 +105,9 @@ gap:8px;
 <pre>-filter_complex "[0:a]pan=stereo|c0=c0|c1=c0[out]" -map 0:v -map "[out]" -c:v copy -c:a libopus -b:a 192k </pre>
 <pre>-filter:a "volume=5.0" -c:a libopus -c:v copy</pre>
 <pre>-filter_complex "[0:a]pan=stereo|c0=c0|c1=c0[audio];[audio]volume=5.0[out]" -map 0:v -map "[out]" -c:v copy -c:a libopus -b:a 192k </pre>
+<pre>-vf "scale=3840:2160:flags=lanczos"</pre>
+<pre>-vf "scale=3840:2160:flags=lanczos" -c:v libx264 -preset slow -crf 18 -c:a copy</pre>
+<pre>-vf "scale=3840:2160:flags=lanczos" -c:v av1_qsv -b:v 10M -preset 4 -c:a copy</pre>
 </pre>
 </details>
 
