--- a/snips.html
+++ b/snips.html
@@ -100,6 +100,7 @@ gap:8px;
 <pre>-vf scale=3840:2160 -c:a copy</pre>
 <pre>ffmpeg -hwaccel qsv -i file -c:a libopus -c:v av1_qsv </pre>
 <pre>ffenmass -i /home/ubuntu/src-voices-en -ext wav /home/ubuntu/out-voices-en-wav</pre>
+<br>
 <pre>-c:v copy-filter_complex "[0:a]pan=stereo|c0=c0|c1=c0[out]" -map 0:v -map "[out]" -c:v copy -c:a aac -b:a 192k output.mp4</pre>
 <pre>-filter_complex "[0:a]pan=stereo|c0=c0|c1=c0[out]" -map 0:v -map "[out]" -c:v copy -c:a aac -b:a 320k output.mp4</pre>
 <pre>-filter_complex "[0:a]pan=stereo|c0=c0|c1=c0[out]" -map 0:v -map "[out]" -c:v copy -c:a libopus -b:a 192k </pre>
@@ -108,6 +109,9 @@ gap:8px;
 <pre>-vf "scale=3840:2160:flags=lanczos"</pre>
 <pre>-vf "scale=3840:2160:flags=lanczos" -c:v libx264 -preset slow -crf 18 -c:a copy</pre>
 <pre>-vf "scale=3840:2160:flags=lanczos" -c:v av1_qsv -b:v 10M -preset 4 -c:a copy</pre>
+<br>
+<pre>-vf "scale=3840:2160:flags=lanczos" -c:v av1_qsv -b:v 10M -preset 4 -filter_complex "[0:a]pan=stereo|c0=c0|c1=c0[audio];[audio]volume=5.0[out]" -map 0:v -map "[out]" -c:a libopus -b:a 192k </pre>
+<pre>-vf "scale=3840:2160:flags=lanczos" -filter_complex "[0:a]pan=stereo|c0=c0|c1=c0[audio];[audio]volume=5.0[out]" -map 0:v -map "[out]" -c:v av1_qsv -b:v 10M -preset 4 -c:a libopus -b:a 192k</pre>
 </pre>
 </details>
 
