--- a/snips.html
+++ b/snips.html
@@ -110,6 +110,7 @@ gap:8px;
 <pre>-vf "scale=3840:2160:flags=lanczos" -c:v libx264 -preset slow -crf 18 -c:a copy</pre>
 <pre>-vf "scale=3840:2160:flags=lanczos" -c:v av1_qsv -b:v 10M -preset 4 -c:a copy</pre>
 <br>
+<a href="https://github.com/kfrn/ffmpeg-things/blob/master/deinterlacing.md">https://github.com/kfrn/ffmpeg-things/blob/master/deinterlacing.md</a>
 <pre>-vf "scale=3840:2160:flags=lanczos" -c:v av1_qsv -b:v 10M -preset 4 -filter_complex "[0:a]pan=stereo|c0=c0|c1=c0[audio];[audio]volume=5.0[out]" -map 0:v -map "[out]" -c:a libopus -b:a 192k </pre>
 <pre>-vf "scale=3840:2160:flags=lanczos" -filter_complex "[0:a]pan=stereo|c0=c0|c1=c0[audio];[audio]volume=5.0[out]" -map 0:v -map "[out]" -c:v av1_qsv -b:v 10M -preset 4 -c:a libopus -b:a 192k</pre>
 </pre>
