--- a/snips.html
+++ b/snips.html
@@ -145,6 +145,15 @@ gap:8px;
 </details>
 
 <details>
+<summary>regex</summary>
+<pre id="copyText" style="border: dotted;">
+<small>all under org</small>
+<pre>^https:\/\/github\.com\/org\/[^\/]+$</pre>
+<small>John Smith Blake Chan -> John Smith; Blake Chan;</small>
+</pre>
+</details>
+
+<details>
 <summary>js - allow pasting</summary>
 <pre id="copyText" style="border: dotted;">
 <pre>var sleep = (milliseconds) => {
