--- a/snips.html
+++ b/snips.html
@@ -41,6 +41,7 @@ gap:8px;
 <pre>bunny --inplace</pre>
 <pre>rclone lsd --http-url https://beta.rclone.org :http:</pre>
 <pre>--multi-thread-streams=0</pre>
+<pre>rclone serve webdav --addr :8080 .</pre>
 </pre>
 </details>
 
