--- a/snips.html
+++ b/snips.html
@@ -42,6 +42,7 @@ gap:8px;
 <pre>rclone lsd --http-url https://beta.rclone.org :http:</pre>
 <pre>--multi-thread-streams=0</pre>
 <pre>rclone serve webdav --addr :8080 .</pre>
+<pre>rclone serve ftp --addr :2121 --vfs-cache-mode full --rc --dir-cache-time 3s .</pre>
 </pre>
 </details>
 
