--- a/snips.html
+++ b/snips.html
@@ -144,6 +144,7 @@ gap:8px;
 <pre>bash spn.sh -p 1 -w 60 links.txt</pre>
 <pre>netstat -tunlp</pre>
 <pre>Get-NetTCPConnection -LocalPort 3389</pre>
+<pre>netstat -anob</pre>
 </pre>
 </details>
 
