--- a/snips.html
+++ b/snips.html
@@ -27,6 +27,7 @@ gap:8px;
 <pre>--merge-output-format mp4</pre>
 <pre>--cookies-from-browser firefox </pre>
 <pre>--write-subs --write-auto-subs --embed-subs --write-thumbnail --write-description --write-info-json </pre>
+<pre>yt-dlp ytarchive:[videoID]</pre>
 </pre>
 </details>
 
