--- a/snips.html
+++ b/snips.html
@@ -28,6 +28,7 @@ gap:8px;
 <pre>--cookies-from-browser firefox </pre>
 <pre>--write-subs --write-auto-subs --embed-subs --write-thumbnail --write-description --write-info-json </pre>
 <pre>yt-dlp ytarchive:[videoID]</pre>
+<pre>yt-dlp --flat-playlist --print id</pre>
 </pre>
 </details>
 
