Update snips.html - filename too long

--- a/snips.html
+++ b/snips.html
@@ -29,6 +29,7 @@ gap:8px;
 <pre>--write-subs --write-auto-subs --embed-subs --write-thumbnail --write-description --write-info-json </pre>
 <pre>yt-dlp ytarchive:[videoID]</pre>
 <pre>yt-dlp --flat-playlist --print id</pre>
+<pre>-o %(title).200B.%(ext)s</pre>
 </pre>
 </details>
 
