--- a/snips.html
+++ b/snips.html
@@ -114,6 +114,11 @@ gap:8px;
 <pre>-vf "scale=3840:2160:flags=lanczos"</pre>
 <pre>-vf "scale=3840:2160:flags=lanczos" -c:v libx264 -preset slow -crf 18 -c:a copy</pre>
 <pre>-vf "scale=3840:2160:flags=lanczos" -c:v av1_qsv -b:v 10M -preset 4 -c:a copy</pre>
+<pre>mkdir outdir
+for %%i in (*.avi) do (
+ffmpeg -i "%%i" -ss 5 "outdir\%%i"
+rem ffmpeg -i %i -ar 22050 outdir\%i https://superuser.com/questions/912730/ffmpeg-batch-convert-make-same-filename
+)</pre>
 <br>
 <a href="https://github.com/kfrn/ffmpeg-things/blob/master/deinterlacing.md">https://github.com/kfrn/ffmpeg-things/blob/master/deinterlacing.md</a>
 <pre>-vf "scale=3840:2160:flags=lanczos" -c:v av1_qsv -b:v 10M -preset 4 -filter_complex "[0:a]pan=stereo|c0=c0|c1=c0[audio];[audio]volume=5.0[out]" -map 0:v -map "[out]" -c:a libopus -b:a 192k </pre>
