--- a/snips.html
+++ b/snips.html
@@ -46,6 +46,7 @@ gap:8px;
 <pre>--multi-thread-streams=0</pre>
 <pre>rclone serve webdav --addr :8080 .</pre>
 <pre>rclone serve ftp --addr :2121 --vfs-cache-mode full --rc --dir-cache-time 3s .</pre>
+<pre>rclone purge include="*.partial"</pre>
 </pre>
 </details>
 
