--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
     <a href="diff.html">textdiff</a>
     <a href="anycase.html">anycase</a>
     <a href="pcd.html">nearest 10th day</a>
+    <a href="RemNewLine.html">RemNewLine</a>
   <B><a href="https://github.com/frida">Frida</a> / <a href="https://portswigger.net/burp">Burp</a> / Mitmproxy</B>
 	200D 200E 200B 202E 3164
 	</p>
