--- a/snips.html
+++ b/snips.html
@@ -172,6 +172,7 @@ Replace: <pre>$1;</pre></b>
 <summary>docker</summary>
 <pre id="copyText" style="border: dotted;">
 <pre>rclone copy coolify:/path/to/forgejo/ /path/to/forgejo/ -P --create-empty-src-dirs</pre>
+<pre>chown -R 1000 /path/to/forgejo/core/</pre>
 </pre>
 </details>
 
