--- a/snips.html
+++ b/snips.html
@@ -30,6 +30,7 @@ gap:8px;
 <pre>--merge-output-format mp4</pre>
 <pre>--cookies-from-browser firefox </pre>
 <pre>--write-subs --write-auto-subs --embed-subs --write-thumbnail --write-description --write-info-json </pre>
+<pre>--add-metadata --concurrent-fragments 20  --merge-output-format mp4 --embed-thumbnail --embed-metadata --write-info-json --clean-infojson --write-comments --write-subs --sub-lang all --sub-format srt --write-description --write-thumbnail</pre>
 <pre>yt-dlp ytarchive:[videoID]</pre>
 <pre>yt-dlp --flat-playlist --print id</pre>
 <pre>-o %(title).200B.%(ext)s</pre>
