--- a/snips.html
+++ b/snips.html
@@ -194,6 +194,7 @@ Replace: <pre>S$2E$3 $1 $4</pre></b>
 <summary>docker</summary>
 <pre id="copyText" style="border: dotted;">
 <pre>rclone copy coolify:/path/to/forgejo/ /path/to/forgejo/ -P --create-empty-src-dirs</pre>
+<pre>rclone sync casaos:/DATA/AppData/gitlab-ee/ /DATA/AppData/gitlab-ee/ -P --create-empty-src-dirs -l</pre>
 <pre>chown -R 1000 /path/to/forgejo/core/</pre>
 <small>docker wipe all</small>
 <pre>docker stop $(docker ps -a -q); docker rm $(docker ps -a -q)</pre>
