--- a/snips.html
+++ b/snips.html
@@ -173,6 +173,7 @@ rem ffmpeg -i %i -ar 22050 outdir\%i https://superuser.com/questions/912730/ffmp
 <pre>netstat -tunlp</pre>
 <pre>Get-NetTCPConnection -LocalPort 3389</pre>
 <pre>netstat -anob</pre>
+<pre>%y%mo%d_%pn_%ra{10} SHAREX</pre>
 </pre>
 </details>
 
