--- a/snips.html
+++ b/snips.html
@@ -203,6 +203,14 @@ Replace: <pre>S$2E$3 $1 $4</pre></b>
 </details>
 
 <details>
+  <summary>linux</summary>
+  <pre id="copyText" style="border: dotted;">
+  <pre>sudo EDITOR=nano crontab -e</pre>
+  <pre>tmux attach -t 0</pre>
+  </pre>
+</details>
+
+<details>
 <summary>js - allow pasting</summary>
 <pre id="copyText" style="border: dotted;">
 <pre>var sleep = (milliseconds) => {
