--- a/snips.html
+++ b/snips.html
@@ -207,6 +207,7 @@ Replace: <pre>S$2E$3 $1 $4</pre></b>
   <pre id="copyText" style="border: dotted;">
   <pre>sudo EDITOR=nano crontab -e</pre>
   <pre>tmux attach -t 0</pre>
+  <pre>tmux kill-ses -t startupSRV</pre>
   </pre>
 </details>
 
