--- a/snips.html
+++ b/snips.html
@@ -208,6 +208,11 @@ Replace: <pre>S$2E$3 $1 $4</pre></b>
   <pre>sudo EDITOR=nano crontab -e</pre>
   <pre>tmux attach -t 0</pre>
   <pre>tmux kill-ses -t startupSRV</pre>
+	  <pre>rclone copy \
+	    ":sftp,host=OLD_HOST,user=OLD_USER,key_file=/path/to/old/key:/source/path" \
+	    ":sftp,host=NEW_HOST,user=NEW_USER,key_file=/path/to/new/key:/dest/path" \
+	    -P --create-empty-src-dirs -l
+	  </pre>
   </pre>
 </details>
 
