--- a/snips.html
+++ b/snips.html
@@ -89,6 +89,7 @@ gap:8px;
 <pre>git reset --hard ae387a292e0fa75ef1571489266700c76d27f800 && git push --force</pre>
 <pre>echo minus one commit&& git reset --hard HEAD~1 && git push -f</pre>
 <pre>shell:appsfolder</pre>
+<pre>$nproc = (Get-WmiObject -Class Win32_Processor).NumberOfLogicalProcessors</pre>
 <pre>%USERPROFILE%\bin</pre>
 <pre>taskkill /F /IM explorer.exe
 cd /d %userprofile%\AppData\Local
