--- a/snips.html
+++ b/snips.html
@@ -91,6 +91,7 @@ gap:8px;
 <pre>shell:appsfolder</pre>
 <pre>$nproc = (Get-WmiObject -Class Win32_Processor).NumberOfLogicalProcessors</pre>
 <pre>%USERPROFILE%\bin</pre>
+<pre>rundll32.exe user32.dll,LockWorkStation</pre>
 <pre>taskkill /F /IM explorer.exe
 cd /d %userprofile%\AppData\Local
 attrib -h IconCache.db
