--- a/snips.html
+++ b/snips.html
@@ -69,6 +69,7 @@ gap:8px;
 <pre>mkdir recodedvid && FOR %y IN (*.webm) DO @ -i "%y" "./recodedvid/%y-recoded.mp4"</pre>
 <pre>git log --pretty=format:"%h %an %ad %s" --date=iso</pre>
 <pre>git log --pretty=format:"%h %an %ad %s" --date=iso-strict</pre>
+<pre>git checkout --orphan new_empty_branch</pre>
 </pre>
 </details>
 
