--- a/snips.html
+++ b/snips.html
@@ -164,6 +164,8 @@ rem ffmpeg -i %i -ar 22050 outdir\%i https://superuser.com/questions/912730/ffmp
 <pre>find . -type d -name ".thumbnails" -exec rm -r {} \;</pre>
 <small>filetypes in folder counter</small>
 <pre>Get-ChildItem -Recurse | Group-Object Extension -NoElement</pre>
+<small>HEVC from OEM</small>
+<pre>ms-windows-store://pdp/?ProductId=9n4wgh0z6vhq</pre>
 <small>AD</small>
 <pre>(Get-ADUser -filter *).count</pre>
 <pre>(Get-ADUser -filter * |Where {$_.enabled -eq "True"}).count</pre>
