--- a/snips.html
+++ b/snips.html
@@ -52,6 +52,7 @@ gap:8px;
 <pre>rclone serve webdav --addr :8080 .</pre>
 <pre>rclone serve ftp --addr :2121 --vfs-cache-mode full --rc --dir-cache-time 3s .</pre>
 <pre>rclone purge include="*.partial"</pre>
+<pre>for file in *‛？*; do mv "$file" "$(echo "$file" | sed 's/‛？//g')"; done</pre>
 </pre>
 </details>
 
@@ -71,6 +72,8 @@ gap:8px;
 <pre>git log --pretty=format:"%h %an %ad %s" --date=iso</pre>
 <pre>git log --pretty=format:"%h %an %ad %s" --date=iso-strict</pre>
 <pre>git checkout --orphan new_empty_branch</pre>
+<pre>git reset --hard ae387a292e0fa75ef1571489266700c76d27f800 && git push --force</pre>
+<pre>echo minus one commit&& git reset --hard HEAD~1 && git push -f</pre>
 </pre>
 </details>
 
@@ -88,8 +91,6 @@ gap:8px;
 <pre>curl -O xyz </pre>
 <pre>ssh sv01.nty -p 2023 -l testing -i sshkey.private</pre>
 <pre>crontab -e</pre>
-<pre>git reset --hard ae387a292e0fa75ef1571489266700c76d27f800 && git push --force</pre>
-<pre>echo minus one commit&& git reset --hard HEAD~1 && git push -f</pre>
 <pre>shell:appsfolder</pre>
 <pre>$nproc = (Get-WmiObject -Class Win32_Processor).NumberOfLogicalProcessors</pre>
 <pre>%USERPROFILE%\bin</pre>
