--- a/snips.html
+++ b/snips.html
@@ -23,6 +23,7 @@ gap:8px;
 <summary>yt-dlp</summary>
 <pre id="copyText" style="border: dotted;">
 <pre>yt-dlp -f -</pre>
+<pre>--compat-options allow-unsafe-ext</pre>
 <pre>-f mp4 </pre>
 <pre>-S res:360 </pre>
 <pre>-S res,vcodec:av1 </pre>
